# xxhasher

./: CMakeLists.txt
include/: xxh64_64.h  xxhasher.h
src/: xxh64_64.c
